Myriad changes; default state set up, now auto resizes based to fill parent, and clipPaths now work correctly - although only with a modified react.js

--- a/static/reactGraph/sass/screen.scss
+++ b/static/reactGraph/sass/screen.scss
@@ -10,12 +10,6 @@ $colour1_f: rgba(151,187,205, 0.5);
 $colour1_fh: rgba(151,187,205, 0.7);
 
 $colour2: rgba(200,100,100, 1);
-$colour2_f: rgba(200,100,100, 0.5);
-$colour2_fh: rgba(200,100,100, 0.7);
-
-svg {
-  margin: 10px;
-}
 
 svg.reactGraph {
 
@@ -34,16 +28,15 @@ svg.reactGraph {
     stroke-width: 1px;
   }
 
+  path.fill { opacity: 0.5; }
+
+  path.fill:hover { opacity: 0.7; }
+
   path.colour1 { stroke: $colour1; }
-  path.fill_colour1 { fill: $colour1_f; }
-  path.fill_colour1:hover { fill: $colour1_fh; }
+  path.fill.colour1, g.fill.colour1 { fill: $colour1; }
 
   path.colour2 { stroke: $colour2; }
-  path.fill_colour2 { fill: $colour2_f; }
-  path.fill_colour2:hover { fill: $colour2_fh; }
-
-  g.fill_colour1 circle { fill: $colour1; }
-  g.fill_colour2 circle { fill: $colour2; }
+  path.fill.colour2, g.fill.colour2 { fill: $colour2; }
 
   .positive { clip-path: url('#positive'); }
   .negative { clip-path: url('#negative'); }
